--- a/assets/css/sass/elements/_headerMenu.scss
+++ b/assets/css/sass/elements/_headerMenu.scss
@@ -33,6 +33,7 @@
     li {
       float: left;
       margin-left: 8px;
+      border-bottom: none;
 
       &:first-child {
         margin-left: 0;
