Fix touch hover effect.

--- a/assets/css/sass/colors/_colors-css.scss
+++ b/assets/css/sass/colors/_colors-css.scss
@@ -23,6 +23,10 @@ body {
         border-bottom: solid $FUXSIA 3px;
       }
 
+      &.no-touch {
+        border-bottom: none;
+      }
+
       a {
         color: $color2;
       }
