--- a/assets/css/sass/partials/_mixins.scss
+++ b/assets/css/sass/partials/_mixins.scss
@@ -21,6 +21,11 @@
         min-height: calc(100vh - #{$th});
       }
     }
+
+    @media screen and (max-height: 550px) {
+      width: calc(100vw - #{$h});
+      margin-left: $h;
+    }
   }
 }
 
