--- a/assets/css/sass/style.scss
+++ b/assets/css/sass/style.scss
@@ -155,6 +155,10 @@ body {
     @include setLayout(80px);
   }
 
+  @media screen and (max-height: 550px) {
+    @include setLayout(60px);
+  }
+
   #logo {
     @media screen and (max-width: 650px) {
       width: 25%;
@@ -165,7 +169,12 @@ body {
     }
 
     @media screen and (max-width: 350px) {
-      width: 29%;
+      width: 20%;
+    }
+
+    @media screen and (max-height: 550px) {
+      width: 15%;
+      margin: 2% 0 0 2%;
     }
   }
 }
@@ -185,6 +194,18 @@ body {
     @include setLayout(80px);
   }
 
+  @media screen and (max-height: 550px) {
+    #main-header {
+      width: 30px;
+      height: 100vh;
+      position: fixed;
+      margin: 0;
+      padding: 10px;
+      left: 0;
+      bottom: 0;
+    }
+  }
+
   #logo {
     width: $logo_w_small;
     margin-top: 18px;
@@ -199,6 +220,14 @@ body {
 
     @media screen and (max-width: 350px) {
       width: 25%;
+    }
+
+    @media screen and (max-height: 550px) {
+      width: 40px;
+      margin: 2% 0 0 2%;
+      position: absolute;
+      top: 4px;
+      left: 4px;
     }
   }
 }
