--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,27 +121,36 @@ footer.container {
 
 .home.section .container {
   min-height: 350px;
-  height: calc(100vh - 139px);
-  /* otherwise waypoint home doesn't get calculated? */ }
+  height: calc(100vh - 139px); }
   @media screen and (max-width: 480px) {
     .home.section .container {
       height: calc(100vh - 100px); } }
   @media screen and (max-width: 350px) {
     .home.section .container {
       height: calc(100vh - 80px); } }
+  @media screen and (max-height: 550px) {
+    .home.section .container {
+      min-height: 100px;
+      height: calc(100vh - 60px); } }
 .home.section .header {
   position: relative;
-  top: 40%;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
   width: 46.66667%; }
-  @media screen and (max-width: 750px) {
+  @media screen and (min-width: 350px) and (min-height: 500px) {
+    .home.section .header {
+      position: relative;
+      top: 40%;
+      -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+      transform: translateY(-50%); } }
+  @media screen and (max-width: 750px) and (min-height: 500px) {
     .home.section .header {
       width: 60%; } }
   @media screen and (max-width: 650px) {
     .home.section .header {
       width: 100%; } }
+  @media screen and (max-width: 350px) {
+    .home.section .header {
+      margin-top: 5%; } }
   .home.section .header h1:first-child::before {
     content: " ";
     width: .55em;
@@ -151,12 +160,19 @@ footer.container {
     background-size: contain;
     position: relative;
     top: .1em; }
+  @media screen and (max-height: 550px) {
+    .home.section .header h1 {
+      font-size: .5em; } }
   .home.section .header .sub-header {
     float: right; }
     @media screen and (max-width: 480px) {
       .home.section .header .sub-header {
         float: none;
         font-size: .2em; } }
+    @media screen and (max-height: 550px) {
+      .home.section .header .sub-header {
+        float: none;
+        font-size: .12em; } }
 
 .work .header {
   width: 32.5%;
@@ -412,12 +428,18 @@ body {
   @media screen and (max-width: 350px) {
     #header-nav {
       font-size: .6em; } }
+  @media screen and (max-height: 550px) {
+    #header-nav {
+      margin-top: 5%; } }
   #header-nav.expanded {
     display: block;
     margin-top: 40px; }
     @media screen and (max-width: 480px) {
       #header-nav.expanded {
         margin: 10% 0; } }
+    @media screen and (max-height: 550px) {
+      #header-nav.expanded {
+        margin-top: 20px; } }
   #header-nav li {
     float: left;
     margin-left: 8px;
@@ -444,6 +466,12 @@ body {
   @media screen and (max-width: 480px) {
     #collapsed-menu {
       display: none; } }
+  @media screen and (max-height: 550px) {
+    #collapsed-menu {
+      margin-top: 20px; } }
+  @media screen and (max-height: 550px) {
+    #collapsed-menu {
+      margin-top: 40px; } }
   #collapsed-menu a {
     display: block;
     /* icon size */
@@ -468,6 +496,10 @@ body {
   min-height: calc(100vh - 139px); }
   .big-header #content .section.last {
     min-height: calc(100vh - 239px); }
+@media screen and (max-height: 550px) {
+  .big-header #content {
+    width: calc(100vw - 139px);
+    margin-left: 139px; } }
 @media screen and (max-width: 480px) {
   .big-header #main-header {
     height: 100px; }
@@ -481,6 +513,11 @@ body {
     min-height: calc(100vh - 100px); }
     .big-header #content .section.last {
       min-height: calc(100vh - 200px); } }
+@media screen and (max-width: 480px) and (max-height: 550px) {
+  .big-header #content {
+    width: calc(100vw - 100px);
+    margin-left: 100px; } }
+
 @media screen and (max-width: 350px) {
   .big-header #main-header {
     height: 80px; }
@@ -494,6 +531,29 @@ body {
     min-height: calc(100vh - 80px); }
     .big-header #content .section.last {
       min-height: calc(100vh - 180px); } }
+@media screen and (max-width: 350px) and (max-height: 550px) {
+  .big-header #content {
+    width: calc(100vw - 80px);
+    margin-left: 80px; } }
+
+@media screen and (max-height: 550px) {
+  .big-header #main-header {
+    height: 60px; }
+  .big-header #content::before {
+    content: " ";
+    display: block;
+    height: 60px;
+    width: 100%; }
+  .big-header #content .section {
+    height: 100%;
+    min-height: calc(100vh - 60px); }
+    .big-header #content .section.last {
+      min-height: calc(100vh - 160px); } }
+@media screen and (max-height: 550px) and (max-height: 550px) {
+  .big-header #content {
+    width: calc(100vw - 60px);
+    margin-left: 60px; } }
+
 @media screen and (max-width: 650px) {
   .big-header #logo {
     width: 25%; } }
@@ -502,7 +562,11 @@ body {
     margin: 2.5% auto; } }
 @media screen and (max-width: 350px) {
   .big-header #logo {
-    width: 29%; } }
+    width: 20%; } }
+@media screen and (max-height: 550px) {
+  .big-header #logo {
+    width: 15%;
+    margin: 2% 0 0 2%; } }
 
 .small-header #main-header {
   height: 111px; }
@@ -516,6 +580,10 @@ body {
   min-height: calc(100vh - 111px); }
   .small-header #content .section.last {
     min-height: calc(100vh - 211px); }
+@media screen and (max-height: 550px) {
+  .small-header #content {
+    width: calc(100vw - 111px);
+    margin-left: 111px; } }
 @media screen and (max-width: 480px) {
   .small-header #main-header {
     height: 100px; }
@@ -529,6 +597,11 @@ body {
     min-height: calc(100vh - 100px); }
     .small-header #content .section.last {
       min-height: calc(100vh - 200px); } }
+@media screen and (max-width: 480px) and (max-height: 550px) {
+  .small-header #content {
+    width: calc(100vw - 100px);
+    margin-left: 100px; } }
+
 @media screen and (max-width: 350px) {
   .small-header #main-header {
     height: 80px; }
@@ -542,6 +615,20 @@ body {
     min-height: calc(100vh - 80px); }
     .small-header #content .section.last {
       min-height: calc(100vh - 180px); } }
+@media screen and (max-width: 350px) and (max-height: 550px) {
+  .small-header #content {
+    width: calc(100vw - 80px);
+    margin-left: 80px; } }
+
+@media screen and (max-height: 550px) {
+  .small-header #main-header {
+    width: 30px;
+    height: 100vh;
+    position: fixed;
+    margin: 0;
+    padding: 10px;
+    left: 0;
+    bottom: 0; } }
 .small-header #logo {
   width: 111px;
   margin-top: 18px; }
@@ -554,6 +641,13 @@ body {
   @media screen and (max-width: 350px) {
     .small-header #logo {
       width: 25%; } }
+  @media screen and (max-height: 550px) {
+    .small-header #logo {
+      width: 40px;
+      margin: 2% 0 0 2%;
+      position: absolute;
+      top: 4px;
+      left: 4px; } }
 
 @media screen and (max-width: 650px) {
   .tiles {
