Add landscape css for under 550px height. TODO click menu breaks.

--- a/assets/css/sass/partials/_settings.scss
+++ b/assets/css/sass/partials/_settings.scss
@@ -20,6 +20,9 @@ $font_family_2: 'Dosis', sans-serif;
 $header_h_big: 139px;
 $header_h_small: 111px;
 
+$header_h_smallest: 60px;
+$header_vertical_w: 50px;
+
 $logo_w_big: 149px;
 $logo_w_small: $header_h_small;
 
