--- a/assets/css/sass/_settings.scss
+++ b/assets/css/sass/_settings.scss
@@ -1,26 +1,27 @@
 // ---------------------- ENJOY MONDAYS PATTERN */
 
-// ------------------------------------- COLORS */
+// ------------------------------------- COLORS
 
-$theme_colors: (
-  LIGHT_GRAY: #E9E8E3,
-  DARK_GRAY: #3A3A3A,
-  DARK_BLUE: #363B48,
-  FUXSIA: #DF3F54,
-  LIGHT_FUXSIA: #F17C71
-);
+$color1: $LIGHT_GRAY;
+$color2: $DARK_GRAY;
+$color3: $DARK_BLUE;
+$color4: $FUXSIA;
+$color5: $LIGHT_FUXSIA;
 
 
-// -------------------------------------- FONTS */
+// -------------------------------------- FONTS
 
 $font_family_1: 'Lato', sans-serif;
 $font_family_2: 'Dosis', sans-serif;
 
 
-// ------------------------------- FIX MEASURES */
+// ------------------------------- FIX MEASURES
 
 $header_h_big: 139px;
 $header_h_small: 111px;
+
+$header_h_smallest: 60px;
+$header_vertical_w: 50px;
 
 $logo_w_big: 149px;
 $logo_w_small: $header_h_small;
