--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,44 +1,3 @@
-.section:before, .section:after {
-  content: "";
-  display: table; }
-.section:after {
-  clear: both; }
-.section {
-  zoom: 1; }
-
-a {
-  text-decoration: none; }
-
-ul, li {
-  list-style: none; }
-
-img {
-  width: 100%;
-  height: auto; }
-
-.left {
-  float: left; }
-
-.right {
-  float: right; }
-
-.clearfix {
-  clear: both; }
-
-.hidden {
-  display: none; }
-
-.screen-reader-text {
-  position: absolute;
-  height: 0;
-  width: 0;
-  opacity: 0;
-  font-size: 0; }
-
-.img-wrapper {
-  height: auto;
-  display: block; }
-
 body {
   background-color: #E9E8E3;
   color: #3A3A3A; }
@@ -79,6 +38,47 @@ body {
     color: #E9E8E3; }
     body footer a {
       color: #DF3F54; }
+
+.section:before, .section:after {
+  content: "";
+  display: table; }
+.section:after {
+  clear: both; }
+.section {
+  zoom: 1; }
+
+a {
+  text-decoration: none; }
+
+ul, li {
+  list-style: none; }
+
+img {
+  width: 100%;
+  height: auto; }
+
+.left {
+  float: left; }
+
+.right {
+  float: right; }
+
+.clearfix {
+  clear: both; }
+
+.hidden {
+  display: none; }
+
+.screen-reader-text {
+  position: absolute;
+  height: 0;
+  width: 0;
+  opacity: 0;
+  font-size: 0; }
+
+.img-wrapper {
+  height: auto;
+  display: block; }
 
 footer.container {
   height: 100px; }
@@ -128,10 +128,6 @@ footer.container {
   @media screen and (max-width: 350px) {
     .home.section .container {
       height: calc(100vh - 80px); } }
-  @media screen and (max-height: 550px) {
-    .home.section .container {
-      min-height: 100px;
-      height: calc(100vh - 60px); } }
 .home.section .header {
   position: relative;
   width: 46.66667%; }
@@ -160,19 +156,12 @@ footer.container {
     background-size: contain;
     position: relative;
     top: .1em; }
-  @media screen and (max-height: 550px) {
-    .home.section .header h1 {
-      font-size: .5em; } }
   .home.section .header .sub-header {
     float: right; }
     @media screen and (max-width: 480px) {
       .home.section .header .sub-header {
         float: none;
         font-size: .2em; } }
-    @media screen and (max-height: 550px) {
-      .home.section .header .sub-header {
-        float: none;
-        font-size: .12em; } }
 
 .work .header {
   width: 32.5%;
@@ -428,18 +417,12 @@ body {
   @media screen and (max-width: 350px) {
     #header-nav {
       font-size: .6em; } }
-  @media screen and (max-height: 550px) {
-    #header-nav {
-      margin-top: 5%; } }
   #header-nav.expanded {
     display: block;
     margin-top: 40px; }
     @media screen and (max-width: 480px) {
       #header-nav.expanded {
         margin: 10% 0; } }
-    @media screen and (max-height: 550px) {
-      #header-nav.expanded {
-        margin-top: 20px; } }
   #header-nav li {
     float: left;
     margin-left: 8px;
@@ -466,12 +449,6 @@ body {
   @media screen and (max-width: 480px) {
     #collapsed-menu {
       display: none; } }
-  @media screen and (max-height: 550px) {
-    #collapsed-menu {
-      margin-top: 20px; } }
-  @media screen and (max-height: 550px) {
-    #collapsed-menu {
-      margin-top: 40px; } }
   #collapsed-menu a {
     display: block;
     /* icon size */
@@ -496,10 +473,6 @@ body {
   min-height: calc(100vh - 139px); }
   .big-header #content .section.last {
     min-height: calc(100vh - 239px); }
-@media screen and (max-height: 550px) {
-  .big-header #content {
-    width: calc(100vw - 139px);
-    margin-left: 139px; } }
 @media screen and (max-width: 480px) {
   .big-header #main-header {
     height: 100px; }
@@ -513,11 +486,6 @@ body {
     min-height: calc(100vh - 100px); }
     .big-header #content .section.last {
       min-height: calc(100vh - 200px); } }
-@media screen and (max-width: 480px) and (max-height: 550px) {
-  .big-header #content {
-    width: calc(100vw - 100px);
-    margin-left: 100px; } }
-
 @media screen and (max-width: 350px) {
   .big-header #main-header {
     height: 80px; }
@@ -531,29 +499,6 @@ body {
     min-height: calc(100vh - 80px); }
     .big-header #content .section.last {
       min-height: calc(100vh - 180px); } }
-@media screen and (max-width: 350px) and (max-height: 550px) {
-  .big-header #content {
-    width: calc(100vw - 80px);
-    margin-left: 80px; } }
-
-@media screen and (max-height: 550px) {
-  .big-header #main-header {
-    height: 60px; }
-  .big-header #content::before {
-    content: " ";
-    display: block;
-    height: 60px;
-    width: 100%; }
-  .big-header #content .section {
-    height: 100%;
-    min-height: calc(100vh - 60px); }
-    .big-header #content .section.last {
-      min-height: calc(100vh - 160px); } }
-@media screen and (max-height: 550px) and (max-height: 550px) {
-  .big-header #content {
-    width: calc(100vw - 60px);
-    margin-left: 60px; } }
-
 @media screen and (max-width: 650px) {
   .big-header #logo {
     width: 25%; } }
@@ -563,10 +508,6 @@ body {
 @media screen and (max-width: 350px) {
   .big-header #logo {
     width: 20%; } }
-@media screen and (max-height: 550px) {
-  .big-header #logo {
-    width: 15%;
-    margin: 2% 0 0 2%; } }
 
 .small-header #main-header {
   height: 111px; }
@@ -580,10 +521,6 @@ body {
   min-height: calc(100vh - 111px); }
   .small-header #content .section.last {
     min-height: calc(100vh - 211px); }
-@media screen and (max-height: 550px) {
-  .small-header #content {
-    width: calc(100vw - 111px);
-    margin-left: 111px; } }
 @media screen and (max-width: 480px) {
   .small-header #main-header {
     height: 100px; }
@@ -597,11 +534,6 @@ body {
     min-height: calc(100vh - 100px); }
     .small-header #content .section.last {
       min-height: calc(100vh - 200px); } }
-@media screen and (max-width: 480px) and (max-height: 550px) {
-  .small-header #content {
-    width: calc(100vw - 100px);
-    margin-left: 100px; } }
-
 @media screen and (max-width: 350px) {
   .small-header #main-header {
     height: 80px; }
@@ -615,20 +547,6 @@ body {
     min-height: calc(100vh - 80px); }
     .small-header #content .section.last {
       min-height: calc(100vh - 180px); } }
-@media screen and (max-width: 350px) and (max-height: 550px) {
-  .small-header #content {
-    width: calc(100vw - 80px);
-    margin-left: 80px; } }
-
-@media screen and (max-height: 550px) {
-  .small-header #main-header {
-    width: 30px;
-    height: 100vh;
-    position: fixed;
-    margin: 0;
-    padding: 10px;
-    left: 0;
-    bottom: 0; } }
 .small-header #logo {
   width: 111px;
   margin-top: 18px; }
@@ -641,13 +559,6 @@ body {
   @media screen and (max-width: 350px) {
     .small-header #logo {
       width: 25%; } }
-  @media screen and (max-height: 550px) {
-    .small-header #logo {
-      width: 40px;
-      margin: 2% 0 0 2%;
-      position: absolute;
-      top: 4px;
-      left: 4px; } }
 
 @media screen and (max-width: 650px) {
   .tiles {
@@ -667,5 +578,83 @@ body {
     .tiles.three .tile {
       width: 80%;
       margin: 10% auto; } }
+
+@media screen and (max-height: 550px) {
+  #main-header #logo {
+    width: 18%;
+    margin: 2% 0; }
+  #main-header #header-nav {
+    margin-top: 5%; }
+    #main-header #header-nav.expanded {
+      float: none;
+      width: 100%;
+      height: 100vh;
+      margin: 60px auto;
+      font-size: .06em;
+      -webkit-transition: display 0.2s;
+      -ms-transition: display 0.2s;
+      transition: display 0.2s; }
+      #main-header #header-nav.expanded li {
+        width: 100%;
+        float: none;
+        margin: 0 0 17%; }
+        #main-header #header-nav.expanded li:first-child {
+          margin-top: 20px; }
+        #main-header #header-nav.expanded li a {
+          padding: 0;
+          margin: 0; }
+  #main-header #collapsed-menu {
+    margin: 20px auto;
+    float: none; }
+
+  .big-header #main-header {
+    height: 60px; }
+  .big-header #content::before {
+    content: " ";
+    display: block;
+    height: 60px;
+    width: 100%; }
+  .big-header #content .section {
+    height: 100%;
+    min-height: calc(100vh - 60px); }
+    .big-header #content .section.last {
+      min-height: calc(100vh - 160px); }
+
+  .small-header #main-header {
+    height: 60px; }
+  .small-header #content::before {
+    content: " ";
+    display: block;
+    height: 60px;
+    width: 100%; }
+  .small-header #content .section {
+    height: 100%;
+    min-height: calc(100vh - 60px); }
+    .small-header #content .section.last {
+      min-height: calc(100vh - 160px); }
+  .small-header #main-header {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 44px;
+    height: 100vh;
+    padding: 3px;
+    margin: 0; }
+    .small-header #main-header #logo {
+      float: none;
+      margin: 2% auto;
+      width: 100%; }
+  .small-header #content {
+    width: calc(100vw - 50px);
+    padding-left: 50px; }
+
+  #content .header h1 {
+    font-size: .5em; }
+  #content .sub-header {
+    float: none;
+    font-size: .12em; }
+  #content .home.section .container {
+    min-height: 100px;
+    height: calc(100vh - 60px); } }
 
 /*# sourceMappingURL=style.css.map */
