--- a/assets/css/sass/sections/_home.scss
+++ b/assets/css/sass/sections/_home.scss
@@ -44,7 +44,11 @@
 	      position: relative;
 	      top: .1em;
 	    }
-    }
+
+	    @media screen and (max-width: 350px) {
+	    	font-size: .9em;
+	    }
+     }
   
 		.sub-header {
 		  float: right;
