--- a/assets/css/sass/elements/_landscape.scss
+++ b/assets/css/sass/elements/_landscape.scss
@@ -49,6 +49,11 @@
     .small-header {
       @include setLayout($h);
 
+      &#site {
+        width: calc(100vw - #{$w});
+        padding-left: $w;
+      }
+
       #main-header {
         position: fixed;
         left: 0;
@@ -65,14 +70,9 @@
           width: 100%;
         }
       }
-    
-      #content {
-        width: calc(100vw - #{$w});
-        padding-left: $w;
 
-        .section.last {
+      #content .section.last {
           min-height: calc(100vh - #{$footer_h});
-        }
       }
     }
 
