--- a/assets/css/sass/elements/_landscape.scss
+++ b/assets/css/sass/elements/_landscape.scss
@@ -78,8 +78,13 @@
 
     #content {
 
-      .header h1 {
-          font-size: .5em;
+      .header { 
+        
+        
+        h1 {
+        //font-size: .5em;
+
+        }
       }
 
       .sub-header {
@@ -117,6 +122,7 @@
           }
 
           .sub-header {
+            float: right;
             font-size: .25em;
           }
         }
