--- a/assets/css/sass/elements/_landscape.scss
+++ b/assets/css/sass/elements/_landscape.scss
@@ -79,11 +79,8 @@
     #content {
 
       .header { 
-        
-        
-        h1 {
-        //font-size: .5em;
-
+        @media screen and (max-width: 650px) {
+          width: initial;
         }
       }
 
@@ -96,12 +93,21 @@
         .container {
           min-height: 100px;
           height: calc(100vh - #{$h});
+
+          .header {
+            float: right;
+          }
         }
       }
 
       .about.section {
         .header {
+          width: 80%;
           padding-bottom: 5%;
+
+          > div {
+            float: none;
+          }
         }
 
         .tiles.three .tile {
