--- a/assets/css/sass/elements/_footer.scss
+++ b/assets/css/sass/elements/_footer.scss
@@ -1,10 +1,6 @@
 
 footer.container {
-  height: $footer_h;
-
-  @media screen and (max-width: 650px) {
-    font-size: 13px;
-  }
+  height: $footer_h_1;
 
   & > div {
     @include vCentered;
@@ -20,18 +16,10 @@ footer.container {
   
   .site-info {
     float: left;
-    font-weight: 700;
-    font-size: .95em;
-
-    a {
-      font-weight: 900;
-    }
   }
 
   .social-links {
     float: right;
-    /* otherwise webkit adds margin 1em */
-    font-size: 0;
    
     li {
       display: inline-block;
